<resources>
    <string name="app_name">Weather</string>

    <string name="empty"> </string>
    <string name="settings">Settings</string>

    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_network">No network access.</string>
    <string name="error_api_unknown_host">The address is currently unreachable.</string>
    <string name="error_no_location">Please select a location from top right icon on screen.</string>
    <string name="err_no_location_service">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="err_fetching_location">Location service are not available at the moment, Please try providing city name manually.</string>
    <string name="err_empty_location_box">Please provide city name.</string>

    <string name="title_forecast_screen">Weather Forecast</string>
    <string name="title_forecast_day_details_screen">Forecast Details</string>
    <string name="title_select_Location_screen">Add a location or use GPS</string>

    <string name="weather_day_location">Location: %1$s</string>
    <string name="weather_day_status">Weather: %1$s</string>
    <string name="weather_day_temp">Temperature: %1$d\u2103</string>
    <string name="weather_day_feels_like">Feels like: %1$d\u2103</string>
    <string name="weather_day_temp_min">Min: %1$d\u2103</string>
    <string name="weather_day_temp_max">Max: %1$d\u2103</string>
    <string name="weather_day_pressure">Pressure: %1$d pascals</string>
    <string name="weather_day_humidity">Humidity: %1$d mg/L</string>
    <string name="weather_day_details">More Details</string>

    <string name="weather_day_details_date">Date: %1$s</string>
    <string name="weather_day_details_sunrise">Sunrise: %1$s</string>
    <string name="weather_day_details_sunset">Sunset: %1$s</string>
    <string name="weather_day_details_speed">Wind Speed: %1$s km/h</string>

    <string name="select_location_edit_hint">City Name, Country</string>
    <string name="select_location_btn_ok">OK</string>
    <string name="select_location_btn_gps">Detect</string>
    <string name="select_location_tv_or">OR</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="location_permission_rationale">Location permission is needed for this functionality</string>
    <string name="location_permission_denied">Permission was denied, but is needed for this functionality.</string>
    <string name="msg_no_location_service">"Unable to locate, please enable the location service"</string>

</resources>