...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_size_normal">

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_location_edit_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:lines="1"
        android:maxLength="100"
        app:layout_constraintEnd_toStartOf="@id/btnLocationOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnLocationOk"
...
