<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_location"
        android:icon="@drawable/ic_city_location"
        android:orderInCategory="1"
        app:showAsAction="always" />

</menu>